...
  }

  @override
  Widget build(BuildContext context) {
    final userState = ref.watch(userViewModelProvider);
    return Scaffold(
      key: const Key('home_screen'),
      appBar: AppBar(
        title: const Text("Github Explorer"),
        centerTitle: true,
        actions: [
          Consumer(
            builder: (context, ref, child) {
              final isDark = ref.watch(themeProvider) == ThemeMode.dark;
              return IconButton(
...
